--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
 
   <title>MedxBay</title>
 
+
+
+  <meta property="og:title" content="MedxBay - AI-enabled Healthcare Platform" />
+  <meta property="og:description" content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care." />
+  <meta property="og:url" content="https://medxbay.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="MedxBay" />
+
+
   <script>window.$zoho = window.$zoho || {}; $zoho.salesiq = $zoho.salesiq || { ready: function () { } }</script>
   <script id="zsiqscript"
     src="https://salesiq.zohopublic.com/widget?wc=siqf916dc0a932b785f7e211b35ecba0d892072b346b799f8ead87ccac86ec63f73"
