--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <!-- <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>MedxBay</title>
+  <meta name="title" content="MedxBay" />
+  <title>MedxBay</title> -->
 
 
 
