--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <!-- <meta name="description"
+  <meta name="description"
     content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="title" content="MedxBay" />
-  <title>MedxBay</title> -->
+  <title>MedxBay</title>
 
 
 
