added index.html ,twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
   <meta property="og:site_name" content="MedxBay" />
 
 
+
+<meta name="twitter:card" content="summary_large_image" /> 
+<meta name="twitter:title" content="MedxBay - AI-enabled Healthcare Platform" />
+<meta name="twitter:description" content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care." />
+
+
   <script>window.$zoho = window.$zoho || {}; $zoho.salesiq = $zoho.salesiq || { ready: function () { } }</script>
   <script id="zsiqscript"
     src="https://salesiq.zohopublic.com/widget?wc=siqf916dc0a932b785f7e211b35ecba0d892072b346b799f8ead87ccac86ec63f73"
