added index.html ,twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
   <title>MedxBay</title>
 
 
-
   <meta property="og:title" content="MedxBay - AI-enabled Healthcare Platform" />
   <meta property="og:description" content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care." />
+  <meta property="og:image" content="%PUBLIC_URL%/assets/logobrand.png" />
+
   <meta property="og:url" content="https://medxbay.com" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="MedxBay" />
@@ -27,6 +28,7 @@
 <meta name="twitter:card" content="summary_large_image" /> 
 <meta name="twitter:title" content="MedxBay - AI-enabled Healthcare Platform" />
 <meta name="twitter:description" content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care." />
+<meta name="twitter:image" content="%PUBLIC_URL%/assets/logobrand.png" />
 
 
   <script>window.$zoho = window.$zoho || {}; $zoho.salesiq = $zoho.salesiq || { ready: function () { } }</script>
