added index.html ,twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <meta property="og:title" content="MedxBay - AI-enabled Healthcare Platform" />
   <meta property="og:description" content="MedxBay is an AI-enabled healthcare platform that revolutionizes provider workflows and patient care." />
-  <meta property="og:image" content="%PUBLIC_URL%/assets/logobrand.png" />
+  <meta property="og:image" content="https://medxbaylive.vercel.app/assets/logobrand.png" />
 
   <meta property="og:url" content="https://medxbay.com" />
   <meta property="og:type" content="website" />
